feat: add full en/ru translations and replace hardcoded strings

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -1,3 +1,86 @@
 {
-
+  "components.MainScreen.loading": "Loading...",
+  "components.AgentSetupView.notInitialized": "Not initialized",
+  "components.AgentSetupView.specifyApiKeyAndBaseUrl": "Specify API Key and Base URL",
+  "components.AgentSetupView.agentReady": "Agent is ready",
+  "components.AgentSetupView.error": "Error",
+  "components.AgentSetupView.baseUrl": "API URL",
+  "components.AgentSetupView.apiKey": "API Key",
+  "components.AgentSetupView.modelName": "Model name",
+  "components.AgentSetupView.gpt4FreeMode": "Gpt4Free Mode",
+  "components.AgentSetupView.initializeAgent": "Initialize agent",
+  "components.AgentSetupView.status": "Status",
+  "components.MoveGenAgentActionsView.readyForMoveRequest": "Ready for move request",
+  "components.MoveGenAgentActionsView.generatingMove": "Generating move...",
+  "components.MoveGenAgentActionsView.failedToGenerateMove": "Failed to generate move",
+  "components.MoveGenAgentActionsView.moveGeneratedSuccessfully": "Move generated successfully",
+  "components.MoveGenAgentActionsView.moveGenerationError": "Move generation error",
+  "components.MoveGenAgentActionsView.globalTarget": "Global target",
+  "components.MoveGenAgentActionsView.status": "Status",
+  "components.MoveGenAgentActionsView.nextMove": "Next move",
+  "components.MoveGenAgentPanel.title": "Move generation",
+  "components.WorldGenAgentActionsView.readyForGeneration": "Ready for generation",
+  "components.WorldGenAgentActionsView.generatingWorld": "Generating world...",
+  "components.WorldGenAgentActionsView.failedToGenerateMap": "Failed to generate map",
+  "components.WorldGenAgentActionsView.mapGeneratedSuccessfully": "Map generated successfully",
+  "components.WorldGenAgentActionsView.mapGenerationError": "Map generation error",
+  "components.WorldGenAgentActionsView.worldDescription": "World description",
+  "components.WorldGenAgentActionsView.width": "Width",
+  "components.WorldGenAgentActionsView.height": "Height",
+  "components.WorldGenAgentActionsView.status": "Status",
+  "components.WorldGenAgentActionsView.generateWorld": "Generate world",
+  "components.WorldGenAgentPanel.title": "World Generation",
+  "components.SaveLoadPanel.saveLoadMap": "Save and load map",
+  "components.ImportExportSection.pasteJsonForImport": "Paste JSON to import",
+  "components.ImportExportSection.showCurrentMapJson": "Show current map JSON",
+  "components.ImportExportSection.downloadJson": "Download JSON",
+  "components.ImportExportSection.loadMapFromJson": "Load map from this JSON",
+  "components.ImportExportSection.mapExportedSuccess": "Map successfully exported.",
+  "components.ImportExportSection.mapImportedSuccess": "Map successfully imported.",
+  "components.ImportExportSection.mapImportError": "Map import error",
+  "components.SaveLoadSection.enterNameForSaving": "Enter a name to save the world.",
+  "components.SaveLoadSection.worldSavedAs": "World saved as \"{{saveName}}\".",
+  "components.SaveLoadSection.selectSavedWorld": "Select a saved world.",
+  "components.SaveLoadSection.savedWorldsNotFound": "Saved worlds not found.",
+  "components.SaveLoadSection.worldNotFound": "World \"{{selectedName}}\" not found.",
+  "components.SaveLoadSection.worldLoadedSuccessfully": "World \"{{selectedName}}\" loaded successfully.",
+  "components.SaveLoadSection.worldLoadError": "❌ Error loading saved world.",
+  "components.SaveLoadSection.selectWorldToDelete": "Select a world to delete.",
+  "components.SaveLoadSection.confirmDeleteWorld": "Are you sure you want to delete the world \"{{selectedName}}\"?",
+  "components.SaveLoadSection.worldDeleted": "World \"{{selectedName}}\" deleted.",
+  "components.SaveLoadSection.worldDeleteError": "❌ Error deleting saved world.",
+  "components.SaveLoadSection.savedMaps": "Saved Maps",
+  "components.SaveLoadSection.worldName": "World Name",
+  "components.SaveLoadSection.saveMap": "Save Map",
+  "components.SaveLoadSection.selectWorld": "Select World",
+  "components.SaveLoadSection.load": "Load",
+  "components.SidebarPanel.empty": "Empty",
+  "components.EntityDetailsPanel.id": "ID",
+  "components.EntityDetailsPanel.inventory": "Inventory",
+  "components.EntityDetailsPanel.emptyInventory": "Inventory is empty",
+  "components.EntityDetailsPanel.selectEntity": "Select an entity",
+  "components.TestActionsPanel.testActions": "Test actions",
+  "components.TestActionsPanel.apple": "Apple",
+  "components.TestActionsPanel.juicyRedApple": "Juicy red apple",
+  "components.TestActionsPanel.tree": "Tree",
+  "components.TestActionsPanel.largeGreenTree": "Large green tree",
+  "components.TestActionsPanel.mountain": "Mountain",
+  "components.TestActionsPanel.largeMountain": "Large mountain",
+  "components.TestActionsPanel.addNewStackOfApple": "Add new stack of 🍎",
+  "components.TestActionsPanel.addAppleToExistingStack": "Add 🍎 to existing stack",
+  "components.TestActionsPanel.removeOneApple": "Remove one 🍎",
+  "components.TestActionsPanel.removeAllApples": "Remove all 🍎",
+  "components.TestActionsPanel.setTreeFeature": "Set tile feature",
+  "components.TestActionsPanel.setMountainFeature": "Set tile feature",
+  "components.TestActionsPanel.clearTileFeature": "Clear tile feature",
+  "components.TestActionsPanel.atCoordinates": "at ({{x}}, {{y}})",
+  "components.TileDetailsPanel.terrain": "Terrain",
+  "components.TileDetailsPanel.empty": "Empty",
+  "components.TileDetailsPanel.object": "Object",
+  "components.TileDetailsPanel.entities": "Entities",
+  "components.TileDetailsPanel.selectTile": "Select a tile",
+  "components.TileDetailsPanel.coordinates": "Coordinates",
+  "components.MoveListPanel.moves": "Moves",
+  "components.MoveItem.moveNumber": "Move {{number}}",
+  "components.WorldMapView.worldMap": "World map"
 }
