--- a/src/i18n/locales/ru/translation.json
+++ b/src/i18n/locales/ru/translation.json
@@ -1,3 +1,86 @@
 {
-
+  "components.MainScreen.loading": "Загрузка...",
+  "components.AgentSetupView.notInitialized": "Не инициализирован",
+  "components.AgentSetupView.specifyApiKeyAndBaseUrl": "Укажите API Key и Base URL",
+  "components.AgentSetupView.agentReady": "Агент готов",
+  "components.AgentSetupView.error": "Ошибка",
+  "components.AgentSetupView.baseUrl": "Адрес API",
+  "components.AgentSetupView.apiKey": "Ключ API",
+  "components.AgentSetupView.modelName": "Имя модели",
+  "components.AgentSetupView.gpt4FreeMode": "Режим Gpt4Free",
+  "components.AgentSetupView.initializeAgent": "Инициализировать агента",
+  "components.AgentSetupView.status": "Статус",
+  "components.MoveGenAgentActionsView.readyForMoveRequest": "Готов к запросу хода",
+  "components.MoveGenAgentActionsView.generatingMove": "Генерация хода...",
+  "components.MoveGenAgentActionsView.failedToGenerateMove": "Не удалось сгенерировать ход",
+  "components.MoveGenAgentActionsView.moveGeneratedSuccessfully": "Ход успешно сгенерирован",
+  "components.MoveGenAgentActionsView.moveGenerationError": "Ошибка генерации хода",
+  "components.MoveGenAgentActionsView.globalTarget": "Глобальная цель",
+  "components.MoveGenAgentActionsView.status": "Статус",
+  "components.MoveGenAgentActionsView.nextMove": "Следующий ход",
+  "components.MoveGenAgentPanel.title": "Генерация хода",
+  "components.WorldGenAgentActionsView.readyForGeneration": "Готов к генерации",
+  "components.WorldGenAgentActionsView.generatingWorld": "Генерация мира...",
+  "components.WorldGenAgentActionsView.failedToGenerateMap": "Не удалось сгенерировать карту",
+  "components.WorldGenAgentActionsView.mapGeneratedSuccessfully": "Карта успешно сгенерирована",
+  "components.WorldGenAgentActionsView.mapGenerationError": "Ошибка генерации карты",
+  "components.WorldGenAgentActionsView.worldDescription": "Описание мира",
+  "components.WorldGenAgentActionsView.width": "Ширина",
+  "components.WorldGenAgentActionsView.height": "Высота",
+  "components.WorldGenAgentActionsView.status": "Статус",
+  "components.WorldGenAgentActionsView.generateWorld": "Сгенерировать мир",
+  "components.WorldGenAgentPanel.title": "Генерация мира",
+  "components.SaveLoadPanel.saveLoadMap": "Сохранение и загрузка карты",
+  "components.ImportExportSection.pasteJsonForImport": "Вставьте JSON для импорта",
+  "components.ImportExportSection.showCurrentMapJson": "Показать JSON текущей карты",
+  "components.ImportExportSection.downloadJson": "Скачать JSON",
+  "components.ImportExportSection.loadMapFromJson": "Загрузить карту из этого JSON",
+  "components.ImportExportSection.mapExportedSuccess": "Карта успешно экспортирована.",
+  "components.ImportExportSection.mapImportedSuccess": "Карта успешно импортирована.",
+  "components.ImportExportSection.mapImportError": "Ошибка импорта карты",
+  "components.SaveLoadSection.enterNameForSaving": "Введите имя для сохранения мира.",
+  "components.SaveLoadSection.worldSavedAs": "Мир сохранён как \"{{saveName}}\".",
+  "components.SaveLoadSection.selectSavedWorld": "Выберите сохранённый мир.",
+  "components.SaveLoadSection.savedWorldsNotFound": "Сохранённые миры не найдены.",
+  "components.SaveLoadSection.worldNotFound": "Мир \"{{selectedName}}\" не найден.",
+  "components.SaveLoadSection.worldLoadedSuccessfully": "Мир \"{{selectedName}}\" успешно загружен.",
+  "components.SaveLoadSection.worldLoadError": "❌ Ошибка при загрузке сохранённого мира.",
+  "components.SaveLoadSection.selectWorldToDelete": "Выберите мир для удаления.",
+  "components.SaveLoadSection.confirmDeleteWorld": "Вы уверены, что хотите удалить мир \"{{selectedName}}\"?",
+  "components.SaveLoadSection.worldDeleted": "Мир \"{{selectedName}}\" удалён.",
+  "components.SaveLoadSection.worldDeleteError": "❌ Ошибка при удалении сохранённого мира.",
+  "components.SaveLoadSection.savedMaps": "Сохраненные карты",
+  "components.SaveLoadSection.worldName": "Имя мира",
+  "components.SaveLoadSection.saveMap": "Сохранить карту",
+  "components.SaveLoadSection.selectWorld": "Выберите мир",
+  "components.SaveLoadSection.load": "Загрузить",
+  "components.SidebarPanel.empty": "Пусто",
+  "components.EntityDetailsPanel.id": "ID",
+  "components.EntityDetailsPanel.inventory": "Инвентарь",
+  "components.EntityDetailsPanel.emptyInventory": "Инвентарь пуст",
+  "components.EntityDetailsPanel.selectEntity": "Выберите сущность",
+  "components.TestActionsPanel.testActions": "Тестовые действия",
+  "components.TestActionsPanel.apple": "Яблоко",
+  "components.TestActionsPanel.juicyRedApple": "Сочное красное яблоко",
+  "components.TestActionsPanel.tree": "Дерево",
+  "components.TestActionsPanel.largeGreenTree": "Большое зеленое дерево",
+  "components.TestActionsPanel.mountain": "Гора",
+  "components.TestActionsPanel.largeMountain": "Большая гора",
+  "components.TestActionsPanel.addNewStackOfApple": "Добавить новый стак 🍎",
+  "components.TestActionsPanel.addAppleToExistingStack": "Добавить 🍎 в существующий стак",
+  "components.TestActionsPanel.removeOneApple": "Удалить одно 🍎",
+  "components.TestActionsPanel.removeAllApples": "Удалить все 🍎",
+  "components.TestActionsPanel.setTreeFeature": "Поставить",
+  "components.TestActionsPanel.setMountainFeature": "Поставить",
+  "components.TestActionsPanel.clearTileFeature": "Очистить клетку",
+  "components.TestActionsPanel.atCoordinates": "на ({{x}}, {{y}})",
+  "components.TileDetailsPanel.terrain": "Местность",
+  "components.TileDetailsPanel.empty": "Пусто",
+  "components.TileDetailsPanel.object": "Объект",
+  "components.TileDetailsPanel.entities": "Сущности",
+  "components.TileDetailsPanel.selectTile": "Выберите тайл",
+  "components.TileDetailsPanel.coordinates": "Координаты",
+  "components.MoveListPanel.moves": "Ходы",
+  "components.MoveItem.moveNumber": "Ход {{number}}",
+  "components.WorldMapView.worldMap": "Карта мира"
 }
