--- a/src/i18n/locales/ru/translation.json
+++ b/src/i18n/locales/ru/translation.json
@@ -82,5 +82,7 @@
   "components.TileDetailsPanel.coordinates": "Координаты",
   "components.MoveListPanel.moves": "Ходы",
   "components.MoveItem.moveNumber": "Ход {{number}}",
+  "components.SettingsPanel.settings": "Настройки",
+  "components.SettingsPanel.language": "Язык",
   "components.WorldMapView.worldMap": "Карта мира"
 }
