feat: display debugReason in MoveItem

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -84,6 +84,7 @@
   "components.TileDetailsPanel.coordinates": "Coordinates",
   "components.MoveListPanel.moves": "Moves",
   "components.MoveItem.moveNumber": "Move {{number}}",
+  "components.MoveItem.debugReasonTitle": "Move reasoning (debug)",
   "components.SettingsPanel.settings": "Settings",
   "components.SettingsPanel.language": "Language",
   "components.WorldMapView.worldMap": "World map",
