--- a/src/i18n/locales/ru/translation.json
+++ b/src/i18n/locales/ru/translation.json
@@ -10,6 +10,7 @@
   "components.AgentSetupView.gpt4FreeMode": "Режим Gpt4Free",
   "components.AgentSetupView.provider": "Провайдер",
   "components.AgentSetupView.autoSelectProvider": "Автоматически",
+  "components.AgentSetupView.useMessageHistory": "Использовать историю сообщений",
   "components.AgentSetupView.initializeAgent": "Инициализировать агента",
   "components.AgentSetupView.status": "Статус",
   "components.MoveGenAgentActionsView.readyForMoveRequest": "Готов к запросу хода",
